[package]
name = "jell-machine"
version = "0.1.0"
license = "MIT"
repository = ""
default-run = "jell-machine"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["clipboard-all", "fs-create-dir", "fs-read-dir", "fs-read-file", "fs-write-file"] }

[features]
default = [ "custom-protocol" ]
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
